platform/dozzle/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dozzle-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: homelab-ca
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - dozzle.homelab
    secretName: dozzle-homelab-tls
  rules:
    - host: dozzle.homelab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dozzle-service
                port:
                  number: 8080
